Refined responsive design to prevent overlaps

--- a/public/styles/_vars.sass
+++ b/public/styles/_vars.sass
@@ -46,10 +46,10 @@ $shadow-5: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22)
     &::-moz-focus-inner
         border: none
 
-$small-desktop: 1550px
+$small-desktop: 1616px
 $small-desktop-max-width: 928px
 
-$tablet: 1200px
+$tablet: 1280px
 $tablet-max-width: 720px
 $tablet-contrast-checker-max-width: 608px
 
